fixed wrapped date in Phone view

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -250,6 +250,7 @@
   margin-right: $spacing-unit;
   color: $brand-color;
   line-height: 1.5;
+  white-space: nowrap;
 }
 
 .project-meta {
